# vod-squirrel

./: .gitignore  .goreleaser.yaml  Cargo.toml  Cross.toml  README.md  clippy.toml
.github/workflows/: dev.yml
src/: eventsub.rs  ffmpeg.rs  google.rs  main.rs  oauth_server.rs  twitch.rs  util.rs  youtube.rs
src/twitch/: api.rs  cdn.rs  mod.rs  structs.rs  twitch.rs  utils.rs
