cargo-features = ["codegen-backend"]

[package]
name = "vod-squirrel"
description = "Downloads a Twitch.tv Video (VOD) and uploads it to YouTube for archival purposes"
version = "0.1.0"
edition = "2024"

categories = ["command-line-utilities"]
keywords = ["cli", "utility", "twitch", "video", "backup", "archive"]

repository = "https://github.com/angeloanan/vod-squirrel"
license = "AGPL-3.0-or-later"
readme = "README.md"
default-run = "vod-squirrel"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
dotenvy = "0.15.7"
indoc = "2.0.6"
m3u8-rs = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "http2",
  "json",
  "multipart",
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "stream",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec", "io"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
codegen-backend = "cranelift"
